Atualização para versão 9.4.0